--- a/frontend/button.html
+++ b/frontend/button.html
@@ -7,12 +7,16 @@
     <title>Document</title>
     <link rel="stylesheet" href="display.css">
     <script src="btn.js"></script>
+    <script src="js/jquery.min.js"></script>
 </head>
 <body>
     <div>
         <input type="file" accept="image/*" id="uploadFile">
         <div id="displayImg"></div>
-        <button id="btn">Submit</button>
+        <button id="btn" onclick="sendImg()">Submit</button>
+    </div>
+    <div id="result">
+        <p></p>
     </div>
 </body>
 </html>
